--- a/css/omens-stylesheet-v3.css
+++ b/css/omens-stylesheet-v3.css
@@ -7475,6 +7475,346 @@ fieldset.search.active-topics legend {
   border: 5px solid #333;
 }
 
+#tracking-container {
+	position:absolute;
+	top:0;
+	opacity:0;
+	z-index:0;
+  transition: 0.33s;
+}
+#omens-profile #omens-prof-tabs-tracking:checked~#info-container #tracking-container {
+  opacity: 1;
+  transition: 0.33s;
+  transition-delay: 0.33s;
+  z-index: 2;
+  transform: scale(1);
+    top: 0;
+}
+
+#omens-profile #omens-prof-tabs-tracking {
+position: absolute;
+    top: 162px;
+    left: 710px;
+}
+
+/* you know what they say about something that looks stupid but works? */
+#omens-profile #omens-prof-tabs-tracking.no-current-threads.no-alt-threads.no-complete-threads.no-comm-threads {
+display:none; 
+}
+
+#omens-profile #tracking-container {
+    display: grid;
+    grid: 1fr 1fr 36% min-content / 33% auto 33%;
+    grid-template-areas:
+        "active-threads active-threads comm-threads"
+        "active-threads active-threads comm-threads"
+        "au-threads completed-threads completed-threads"
+        "fizz-credit fizz-credit fizz-credit";
+    width: 100%;
+    gap: 10px;
+    height: 400px;
+}
+
+#omens-profile #tracking-container.no-alt-threads {
+    grid: 1fr 1fr 36% min-content / 33% auto 33%;
+    grid-template-areas:
+        "active-threads active-threads comm-threads"
+        "active-threads active-threads comm-threads"
+        "completed-threads completed-threads completed-threads"
+        "fizz-credit fizz-credit fizz-credit";
+}
+
+#omens-profile #tracking-container.no-comm-threads {
+    grid: 1fr 1fr 36% min-content / 33% auto 33%;
+    grid-template-areas:
+        "active-threads active-threads au-threads"
+        "active-threads active-threads au-threads"
+        "completed-threads completed-threads completed-threads"
+        "fizz-credit fizz-credit fizz-credit";
+}
+
+#omens-profile #tracking-container.no-complete-threads {
+    grid: 1fr 1fr 36% min-content / 33% auto 33%;
+    grid-template-areas:
+        "active-threads active-threads comm-threads"
+        "active-threads active-threads comm-threads"
+        "active-threads active-threads au-threads"
+        "fizz-credit fizz-credit fizz-credit";
+}
+
+#omens-profile #tracking-container.no-complete-threads.no-comm-threads {
+    grid: 1fr 1fr 36% min-content / 33% auto 33%;
+    grid-template-areas:
+        "au-threads active-threads active-threads"
+        "au-threads active-threads active-threads"
+        "au-threads active-threads active-threads"
+        "fizz-credit fizz-credit fizz-credit";
+}
+
+#omens-profile #tracking-container.no-complete-threads.no-alt-threads.no-comm-threads {
+    grid: 1fr 1fr 36% min-content / 33% auto 33%;
+    grid-template-areas:
+        "active-threads active-threads active-threads"
+        "active-threads active-threads active-threads"
+        "active-threads active-threads active-threads"
+        "fizz-credit fizz-credit fizz-credit";
+}
+
+#omens-profile #tracking-container.no-complete-threads.no-comm-threads.no-current-threads {
+    grid: 1fr 1fr 36% min-content / 33% auto 33%;
+    grid-template-areas:
+        "active-threads active-threads active-threads"
+        "active-threads active-threads active-threads"
+        "active-threads active-threads active-threads"
+        "fizz-credit fizz-credit fizz-credit";
+}
+
+#omens-profile #tracking-container.no-alt-threads.no-comm-threads {
+    grid: 1fr 1fr 36% min-content / 33% auto 33%;
+    grid-template-areas:
+        "active-threads active-threads active-threads"
+        "active-threads active-threads active-threads"
+        "completed-threads completed-threads completed-threads"
+        "fizz-credit fizz-credit fizz-credit";
+}
+
+#omens-profile #tracking-container.no-alt-threads.no-complete-threads {
+    grid: 1fr 1fr 36% min-content / 33% auto 33%;
+    grid-template-areas:
+        "active-threads active-threads comm-threads"
+        "active-threads active-threads comm-threads"
+        "active-threads active-threads comm-threads"
+        "fizz-credit fizz-credit fizz-credit";
+}
+
+#omens-profile #tracking-container.no-alt-threads #altwrap,
+#omens-profile #tracking-container.no-comm-threads #commwrap,
+#omens-profile #tracking-container.no-complete-threads #historywrap {
+	display:none;
+}
+
+#omens-profile #tracking-container #trackerwrap,
+#omens-profile #tracking-container #commwrap,
+#omens-profile #tracking-container #historywrap,
+#omens-profile #tracking-container #altwrap {
+	overflow: auto;
+}
+
+#omens-profile #tracking-container #trackerwrap {
+	grid-area:active-threads;
+    align-content: flex-start;
+	position:relative;
+}
+
+#omens-profile #tracking-container hr {
+	display:none;
+}
+
+#omens-profile #tracking-container .tracker-item a {
+font: 800 16px/100% raleway;
+    text-transform: uppercase;
+    color: #aaa;
+	transition:.25s;
+}
+
+#omens-profile #tracking-container .tracker-item a:hover {
+	color:#ccc;
+	transition:.25s;
+}
+
+
+#omens-profile #tracking-container #fizztrackercredits {
+    grid-area: fizz-credit;
+    font: 900 10px roboto;
+    text-transform: uppercase;
+    text-align: center;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    color: #555;
+}
+
+#omens-profile #tracking-container #fizztrackercredits a {
+	color:#888;
+	transition:.25s;
+}
+
+#omens-profile #tracking-container #fizztrackercredits a:hover {
+	color:#aaa;
+	transition:.25s;
+}
+
+#omens-profile #tracking-container #trackerwrap {
+    padding-right:10px;
+    border:25px solid #333;
+    background: #333;
+    border-radius: 5px;
+    overflow: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+#omens-profile #tracking-container .tracker-item {
+border-bottom: 2px solid #3f3f3f;
+    margin: 5px 0;
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+
+#omens-profile #tracking-container .tracker-item:first-child {
+   margin-top:0;
+}
+
+#omens-profile #tracking-container .tracker-desc {
+    font: 600 10px roboto;
+    text-transform: uppercase;
+    color: #666;
+    margin-bottom: 5px;
+    letter-spacing: .5px;
+	position:relative;
+	z-index:2;
+    text-shadow: -1px -1px 0 #333, 1px -1px 0 #333, -1px 1px 0 #333, 1px 1px 0 #333;
+}
+
+#omens-profile #tracking-container .status.myturn {
+    position: absolute;
+    font-size: 50px;
+    right: 0;
+    color: var(--custom);
+    filter: invert(1);
+    opacity: 25%;
+    bottom: -11px;
+    pointer-events: none;
+    z-index: 0;
+}
+
+#omens-profile #tracking-container #trackerwrap::-webkit-scrollbar,
+#omens-profile #tracking-container #commwrap::-webkit-scrollbar,
+#omens-profile #tracking-container #altwrap::-webkit-scrollbar,
+#omens-profile #tracking-container #historywrap::-webkit-scrollbar {
+    width: 17px;
+}
+
+#omens-profile #tracking-container #trackerwrap::-webkit-scrollbar-thumb,
+#omens-profile #tracking-container #commwrap::-webkit-scrollbar-thumb,
+#omens-profile #tracking-container #altwrap::-webkit-scrollbar-thumb,
+#omens-profile #tracking-container #historywrap::-webkit-scrollbar-thumb {
+    background: var(--group);
+    background: var(--custom);
+    border: 5px solid #333;
+    border-width: 0 5px 0 5px;
+}
+
+#omens-profile #tracking-container #historywrap::-webkit-scrollbar-thumb {
+    border: 5px solid #1a1a1a;
+border-width: 0 5px 0 5px;
+}
+
+#omens-profile #tracking-container #trackerwrap::-webkit-scrollbar-track,
+#omens-profile #tracking-container #commwrap::-webkit-scrollbar-track,
+#omens-profile #tracking-container #altwrap::-webkit-scrollbar-track,
+#omens-profile #tracking-container #historywrap::-webkit-scrollbar-track {
+    background: #444;
+    border: 5px solid #333;
+}
+
+#omens-profile #tracking-container #historywrap::-webkit-scrollbar-track {
+    background: #222;
+    border: 5px solid #1a1a1a;
+}
+
+
+#omens-profile #tracking-container #commwrap {
+    grid-area: comm-threads;
+    background: #333;
+    border: 25px solid #333;
+    border-radius: 5px;
+    padding-right:10px;
+}
+
+#omens-profile #tracking-container #commwrap a,
+#omens-profile #tracking-container #altwrap a {
+    font: 700 10px montserrat;
+    transition:.25s;
+}
+
+#omens-profile #tracking-container #commwrap a:hover,
+#omens-profile #tracking-container #altwrap a:hover {
+    color:#ccc;
+	transition:.25s;
+}
+
+#omens-profile #tracking-container #commwrap .tracker-desc,
+#omens-profile #tracking-container #altwrap .tracker-desc {
+    font: 600 10px roboto;
+    text-transform: uppercase;
+    color: #666;
+    margin-bottom: 5px;
+    letter-spacing: .5px;
+	position:relative;
+	z-index:2;
+}
+
+#omens-profile #tracking-container #commwrap .tracker-lastpost b {
+	display:none;
+}
+
+
+#omens-profile #tracking-container #altwrap {
+	grid-area:au-threads;
+    background: #333;
+    border: 25px solid #333;
+    border-radius: 5px;
+    padding-right:10px;
+}
+
+#omens-profile #tracking-container #altwrap .tracker-location,
+#omens-profile #tracking-container #altwrap .tracker-lastpost {
+display:none;
+}
+
+#omens-profile #tracking-container .tracker-item .status.myturn + a {
+color: var(--custom);
+transition:.25s;
+}
+
+#omens-profile #tracking-container .tracker-item .status.myturn + a:hover {
+color: #ccc;
+transition:.25s;
+}
+
+#omens-profile #tracking-container #historywrap {
+	grid-area:completed-threads;
+    background: #1a1a1a;
+    border: 25px solid #1a1a1a;
+    border-radius: 5px;
+}
+
+#omens-profile #tracking-container #historywrap .tracker-item {
+    border-bottom: 2px solid #222;
+}
+
+#omens-profile #tracking-container #historywrap .tracker-item .tracker-desc { 
+   text-shadow: none;
+}
+
+#omens-profile #tracking-container #historywrap .tracker-item a {
+    font: 700 10px montserrat;
+    color: #8d8d8d;
+    transition: .25s;
+}
+
+#omens-profile #tracking-container #historywrap .tracker-item a:hover {
+    color: #aaa;
+    transition: .25s;
+}
+
+#omens-profile #tracking-container #historywrap .tracker-desc {
+    color: #444;
+}
+
 /* END MAIN PROFILE */
 /* START CUSTOM CODE STYLING */
 
