--- a/post templates/css/styles.css
+++ b/post templates/css/styles.css
@@ -1,1 +1,189 @@
 body { color:red; }
+
+.post-template-18 { 
+    background:#222;
+    margin:25px;
+}
+
+.post-template-18 .post-lyrics {
+    background:var(--custom);
+    padding:50px;
+    position:relative;
+    overflow:hidden;
+}
+
+.post-template-18 .post-lyrics:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: url(https://i.ibb.co/RT4VmKf/19.png);
+    filter: grayscale(100%) contrast(150%);
+    /* opacity: 0.01; */
+    filter: blur(3px) grayscale(1);
+    transform: scale(150%);
+    opacity: 20%;
+    mix-blend-mode: exclusion;
+}
+
+.post-template-18 .lyric-1,
+.post-template-18 .lyric-2,
+.post-template-18 .post-icon img,
+.post-template-18 .post-image-2 {
+    position:relative;
+    z-index:1;
+}
+
+.post-template-18 .lyric-1 {
+    font:700 40px poppins,sans-serif;
+    text-transform:lowercase;
+    color:#222;
+    text-align:left;
+}
+
+.post-template-18 .lyric-2 {
+    font:700 10px montserrat,sans-serif;
+    text-transform:uppercase;
+    display:flex;
+    align-items:center;
+    color:#eee;
+}
+
+.post-template-18 .lyric-2:before {
+    content:'';
+    flex-grow:1;
+    height:2px;
+    background:#eee;
+    opacity:10%;
+    margin-right:10px;
+}
+
+
+.post-template-18 .post-icon {
+    display:flex;
+    background:#131313;
+    padding:35px;
+    position:relative;
+    width:min-content;
+    overflow:hidden;
+}
+/*
+.post-template-18 .post-icon:after {
+    content: "";
+    position: absolute;
+    bottom: -410px;
+    right: 0px;
+    width: 950px;
+    height: 1000px;
+    background: url(https://i.ibb.co/Hx43c2Z/pnghut-new-york-city-cities-skylines-clip-art-news.png);
+    filter: grayscale(100%) contrast(150%) invert(1);
+    opacity: 4%;
+    pointer-events: none;
+}
+*/
+.post-template-18 .post-icon img {
+    display:block;
+    width: 50px;
+    height: 50px;
+   border:10px solid var(--custom);
+   background:#eee;
+   padding:5px;
+   position:relative;
+   z-index:1;
+}
+
+.post-template-18 .post-image-2 {
+    width: calc(500px - 30px);
+    height: 150px;
+    overflow: hidden;
+}
+
+.post-template-18 .post-image-2 img {
+    height:150px;
+}
+
+.post-template-18 .post-images {
+    display:flex;
+    background:#111;
+    justify-content:center;
+    position:relative;
+    overflow:hidden;
+}
+
+.post-template-18 .post-images:after {
+    content: "";
+    position: absolute;
+    bottom: -380px;
+    right: 0;
+    width: 950px;
+    height: 1000px;
+    background: url(https://i.ibb.co/Hx43c2Z/pnghut-new-york-city-cities-skylines-clip-art-news.png);
+    filter: grayscale(100%) contrast(150%) invert(1);
+    opacity: 6%;
+    pointer-events: none;
+}
+
+
+.post-template-18 .post-body {
+    background:#222;
+    font:400 13px/18px roboto, arial, sans-serif;
+    padding:25px;
+    text-align:justify;
+    color: #ccc;
+    border-left:5px solid #2f2f2f;
+    position:relative;
+    overflow:hidden;
+}
+
+.post-template-18 .post-body b {
+    font:500 14px/18px poppins, arial, sans-serif;
+    color:var(--custom);
+}
+
+.post-template-18 .post-body i {
+    color:#fff;
+}
+
+.post-template-18 .post-body span {
+    color:var(--custom);
+    font-family:poppins;
+}
+
+.post-template-18 .post-body u {
+    text-decoration:none;
+    max-height:18px;
+    background:var(--custom);
+    padding:1px 5px;
+    border-radius:3px;
+    color:#222;
+    font-weight:500;
+}
+
+.post-template-18 .post-body tagged {
+    display:flex;
+    flex-flow:row wrap;
+    gap:5px;
+    justify-content:flex-end;
+    position: absolute;
+    bottom: -10px;
+    right:-1px;
+}
+.post-template-18 .post-body tagged a {
+    font:700 20px poppins;
+    text-transform:uppercase;
+    color:#eee;
+    opacity:10%;
+    transition:.25s;
+}
+
+.post-template-18 .post-body tagged a:hover {
+    opacity:33%;
+    transition:.25s;
+}
+
+.post-template-18 .post-body-contain {
+    background:#1a1a1a;
+    padding:25px;
+}
