--- a/css/omens-stylesheet-v3.css
+++ b/css/omens-stylesheet-v3.css
@@ -15055,8 +15055,9 @@ blockquote #eventCountdown .countdown_row.countdown_descr {
   background-color: #1e1e1e;
   border-radius: 10px;
   text-align: justify;
-  position:relative;
+  position: relative;
 }
+
 .omens-post-17 .post-image-2 {
   background-color: #222;
   height: 150px;
@@ -15065,44 +15066,49 @@ blockquote #eventCountdown .countdown_row.countdown_descr {
   position: relative;
   outline: 1px solid var(--custom);
   outline-offset: 10px;
-    margin-bottom: 35px;
+  margin-bottom: 35px;
 }
+
 .omens-post-17 .post-image-2 img {
   width: 500px;
   mix-blend-mode: lighten;
   filter: grayscale(100%) contrast(55%) brightness(55%);
   transition: 0.5s;
 }
+
 .omens-post-17:hover .post-image-2 img {
   filter: grayscale(0%) contrast(100%) brightness(75%);
   transition: 0.5s;
 }
+
 .omens-post-17 .lyric-wrap {
-/* position: absolute; */
-    z-index: 2;
-    /* text-align: center; */
-    /* width: 520px; */
+  /* position: absolute; */
+  z-index: 2;
+  /* text-align: center; */
+  /* width: 520px; */
 }
+
 .omens-post-17 .lyric-2 {
-    /* position: absolute; */
-    /* left: -10px; */
-    /* top: -5px; */
-    font: 300 10px poppins;
-    text-transform: uppercase;
-    line-height: 10px;
-    letter-spacing: 2px;
-    background-color: #191919;
-    outline: 1px solid var(--custom);
-    transition: 0.7s;
-    padding: 10px 12px 10px 10px;
-    position: relative;
-    margin-left: -10px;
-    margin-top: -5px;
-    display: inline-block;
+  /* position: absolute; */
+  /* left: -10px; */
+  /* top: -5px; */
+  font: 300 10px poppins;
+  text-transform: uppercase;
+  line-height: 10px;
+  letter-spacing: 2px;
+  background-color: #191919;
+  outline: 1px solid var(--custom);
+  transition: 0.7s;
+  padding: 10px 12px 10px 10px;
+  position: relative;
+  margin-left: -10px;
+  margin-top: -5px;
+  display: inline-block;
 }
+
 .omens-post-17 .lyric-1 {
   position: absolute;
-  top:0;
+  top: 0;
   width: 500px;
   height: 150px;
   font: 800 25px montserrat;
@@ -15117,7 +15123,7 @@ blockquote #eventCountdown .countdown_row.countdown_descr {
   filter: blur(0px);
   opacity: 1;
   transition: 0.9s;
-  text-align:center;
+  text-align: center;
 }
 
 .omens-post-17:hover .lyric-2 {
@@ -15132,23 +15138,26 @@ blockquote #eventCountdown .countdown_row.countdown_descr {
   transition: 0.9s;
 }
 
-.omens-post-17 .post-image-2 + .lyric-2 { position: relative;
-    top: -35px; }
+.omens-post-17 .post-image-2+.lyric-2 {
+  position: relative;
+  top: -35px;
+}
 
 .omens-post-17 .post-body {
-    padding-right: 30px;
-    line-height: 24px;
-    font-size: 13px;
-    letter-spacing: 0.1px;
-    text-align: justify;
-    position: relative;
-    /* top: 50px; */
-    /* left: 15px; */
-    border-right: solid 10px var(--custom);
-    width: 450px;
-    min-height: 100px;
-    font-family:roboto,sans-serif;
+  padding-right: 30px;
+  line-height: 24px;
+  font-size: 13px;
+  letter-spacing: 0.1px;
+  text-align: justify;
+  position: relative;
+  /* top: 50px; */
+  /* left: 15px; */
+  border-right: solid 10px var(--custom);
+  width: 450px;
+  min-height: 100px;
+  font-family: roboto, sans-serif;
 }
+
 .omens-post-17 .post-icon {
   width: 60px;
   height: 60px;
@@ -15158,6 +15167,7 @@ blockquote #eventCountdown .countdown_row.countdown_descr {
   outline-offset: 10px;
   background: #111;
 }
+
 .omens-post-17 .post-icon img {
   width: 60px;
   height: 60px;
@@ -15165,6 +15175,7 @@ blockquote #eventCountdown .countdown_row.countdown_descr {
   filter: grayscale(100%) contrast(75%) brightness(55%);
   transition: 0.5s;
 }
+
 .omens-post-17:hover .post-icon img {
   filter: grayscale(0%) contrast(75%) brightness(100%);
   transition: 0.5s;
@@ -15174,28 +15185,31 @@ blockquote #eventCountdown .countdown_row.countdown_descr {
   text-decoration-color: var(--custom);
   text-underline-offset: 6px;
 }
+
 .omens-post-17 .post-body b {
   color: var(--custom);
-  font: 600 15px/18px 'eczar',serif;
+  font: 600 15px/18px 'eczar', serif;
   letter-spacing: 0.5px;
 }
+
 .omens-post-17 .post-body tagged {
-    background-color: #222;
-    outline: 1px solid var(--custom);
-    color: #afafaf;
-    outline-offset: 5px;
-    box-shadow: 12px -24px 0px -23px rgb(30 30 30 / 80%);
-    padding: 10px 25px;
-    line-height: 10px;
-    display: flex;
-    gap: 10px;
-    max-width: fit-content;
-    font: 300 12px poppins;
-    line-height: 13px;
-    text-transform: uppercase;
-    letter-spacing: 0.5px;
-    margin-top: 25px;
+  background-color: #222;
+  outline: 1px solid var(--custom);
+  color: #afafaf;
+  outline-offset: 5px;
+  box-shadow: 12px -24px 0px -23px rgb(30 30 30 / 80%);
+  padding: 10px 25px;
+  line-height: 10px;
+  display: flex;
+  gap: 10px;
+  max-width: fit-content;
+  font: 300 12px poppins;
+  line-height: 13px;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+  margin-top: 25px;
 }
+
 .omens-post-17 .post-body tagged a {
   text-decoration: none;
   color: var(--custom);
@@ -15206,23 +15220,25 @@ blockquote #eventCountdown .countdown_row.countdown_descr {
   font: 700 15px 'Crimson Text';
   line-height: 0px;
 }
+
 .omens-post-17 .post-body tagged:before {
   content: "written for";
 }
+
 /* END POST 17 TEMPLATE */
 /* START POST 18 TEMPLATE */
-.omens-post-18 { 
-  background:#222;
-  margin:25px;
+.omens-post-18 {
+  background: #222;
+  margin: 25px;
   border-radius: 5px;
   overflow: hidden;
 }
 
 .omens-post-18 .post-lyrics {
-  background:var(--custom);
-  padding:50px;
-  position:relative;
-  overflow:hidden;
+  background: var(--custom);
+  padding: 50px;
+  position: relative;
+  overflow: hidden;
 }
 
 .omens-post-18 .post-lyrics .post-image-2 img {
@@ -15242,73 +15258,73 @@ blockquote #eventCountdown .countdown_row.countdown_descr {
 .omens-post-18 .lyric-2,
 .omens-post-18 .post-icon img,
 .omens-post-18 .post-images .post-image-2 {
-  position:relative;
-  z-index:1;
+  position: relative;
+  z-index: 1;
 }
 
 .omens-post-18 .lyric-1 {
-  font:700 40px/90% poppins,sans-serif;
-  text-transform:uppercase;
-  color:#222;
-  text-align:left;
+  font: 700 40px/90% poppins, sans-serif;
+  text-transform: uppercase;
+  color: #222;
+  text-align: left;
   margin-bottom: 10px;
 }
 
 .omens-post-18 .lyric-2 {
-  font:700 10px montserrat,sans-serif;
-  text-transform:uppercase;
-  display:flex;
-  align-items:center;
-  color:#eee;
+  font: 700 10px montserrat, sans-serif;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  color: #eee;
 }
 
 .omens-post-18 .lyric-2:before {
-  content:'';
-  flex-grow:1;
-  height:2px;
-  background:#eee;
-  opacity:10%;
-  margin-right:10px;
+  content: '';
+  flex-grow: 1;
+  height: 2px;
+  background: #eee;
+  opacity: 10%;
+  margin-right: 10px;
 }
 
 
 .omens-post-18 .post-icon {
-  display:flex;
-  background:#282828;
-  padding:35px;
-  position:relative;
-  width:min-content;
-  overflow:hidden;
+  display: flex;
+  background: #282828;
+  padding: 35px;
+  position: relative;
+  width: min-content;
+  overflow: hidden;
 }
 
 .omens-post-18 .post-icon img {
-  display:block;
+  display: block;
   width: 50px;
   height: 50px;
- border:10px solid var(--custom);
- background:#eee;
- padding:5px;
- position:relative;
- z-index:1;
+  border: 10px solid var(--custom);
+  background: #eee;
+  padding: 5px;
+  position: relative;
+  z-index: 1;
 }
 
 .omens-post-18 .post-images .post-image-2 {
   width: calc(500px - 30px);
   height: 150px;
   overflow: hidden;
-  filter:grayscale(1);
+  filter: grayscale(1);
 }
 
 .omens-post-18 .post-images .post-image-2 img {
-  height:150px;
+  height: 150px;
 }
 
 .omens-post-18 .post-images {
-  display:flex;
-  background:#282828;
-  justify-content:center;
-  position:relative;
-  overflow:hidden;
+  display: flex;
+  background: #282828;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
 }
 
 .omens-post-18 .post-images:after {
@@ -15326,72 +15342,75 @@ blockquote #eventCountdown .countdown_row.countdown_descr {
 
 
 .omens-post-18 .post-body {
-  background:#222;
-  font:400 13px/18px roboto, arial, sans-serif;
-  padding:25px;
-  text-align:justify;
+  background: #222;
+  font: 400 13px/18px roboto, arial, sans-serif;
+  padding: 25px;
+  text-align: justify;
   color: #ccc;
-  position:relative;
-  overflow:hidden;
+  position: relative;
+  overflow: hidden;
   border-radius: 5px;
   border-top: 5px solid #282828;
   border-bottom: 5px solid #282828;
 }
 
 .omens-post-18 .post-body b {
-  font:500 14px/18px poppins, arial, sans-serif;
-  color:var(--custom);
+  font: 500 14px/18px poppins, arial, sans-serif;
+  color: var(--custom);
 }
 
 .omens-post-18 .post-body i {
-  color:#fff;
+  color: #fff;
 }
 
 .omens-post-18 .post-body span {
-  color:var(--custom);
-  font-family:poppins;
+  color: var(--custom);
+  font-family: poppins;
 }
 
 .omens-post-18 .post-body u {
-  text-decoration:none;
-  max-height:18px;
-  background:var(--custom);
-  padding:1px 5px;
-  border-radius:3px;
-  color:#222;
-  font-weight:500;
+  text-decoration: none;
+  max-height: 18px;
+  background: var(--custom);
+  padding: 1px 5px;
+  border-radius: 3px;
+  color: #222;
+  font-weight: 500;
 }
 
 .omens-post-18 .post-body tagged {
-  display:flex;
-  flex-flow:row wrap;
-  gap:5px;
-  justify-content:flex-end;
+  display: flex;
+  flex-flow: row wrap;
+  gap: 5px;
+  justify-content: flex-end;
   position: absolute;
   bottom: -9px;
   right: -2px;
 }
+
 .omens-post-18 .post-body tagged a {
-  font:700 20px poppins;
-  text-transform:uppercase;
-  color:#282828;
-  transition:.25s;
+  font: 700 20px poppins;
+  text-transform: uppercase;
+  color: #282828;
+  transition: .25s;
 }
 
 .omens-post-18 .post-body tagged a:hover {
-  color:#444;
-  transition:.25s;
+  color: #444;
+  transition: .25s;
 }
 
 .omens-post-18 .post-body-contain {
-  background:#1e1e1e;
-  padding:25px;
+  background: #1e1e1e;
+  padding: 25px;
 }
+
 /* END POST 18 TEMPLATE */
 /* START POST 19 TEMPLATE */
 .omens-post-19 {
   background: #222;
-  margin: 50px 50px 50px 45px; /* the miniprof has a weird margin for ??? some reason ?? so the value of the left margin needs to be 5px smaller to compensate */
+  margin: 50px 50px 50px 45px;
+  /* the miniprof has a weird margin for ??? some reason ?? so the value of the left margin needs to be 5px smaller to compensate */
 }
 
 .omens-post-19 .post-image-2 {
@@ -15406,13 +15425,13 @@ blockquote #eventCountdown .countdown_row.countdown_descr {
 }
 
 .omens-post-19 .post-image-2 img {
-display: block;
-position:absolute;
+  display: block;
+  position: absolute;
   mix-blend-mode: multiply;
   filter: contrast(150%) grayscale(100%) blur(2px) invert(1);
   opacity: 20%;
   transform: scale(1.2);
-pointer-events:none;
+  pointer-events: none;
 }
 
 .omens-post-19 .post-image-2 .lyric-1 {
@@ -15454,7 +15473,9 @@ pointer-events:none;
   text-align: justify;
 }
 
-.omens-post-19.alt-ver .post-body { margin:0 25px 25px; }
+.omens-post-19.alt-ver .post-body {
+  margin: 0 25px 25px;
+}
 
 .omens-post-19 .post-body b {
   font: 600 14px/18px roboto, sans-serif;
@@ -15518,8 +15539,9 @@ pointer-events:none;
 }
 
 .omens-post-19 .post-icon {
-margin-bottom:25px;
+  margin-bottom: 25px;
 }
+
 /* END POST 19 TEMPLATE */
 /* START POST 20 TEMPLATE */
 .omens-post-20 {
@@ -15609,7 +15631,7 @@ margin-bottom:25px;
 }
 
 .omens-post-20 .post-body i {
-  color:#eee;
+  color: #eee;
 }
 
 .omens-post-20 .post-body span {
@@ -15678,6 +15700,7 @@ margin-bottom:25px;
   border-radius: 5px;
   margin: 10px;
 }
+
 /* END POST 20 TEMPLATE */
 /* END ALL POST TEMPLATES */
 /* START DICE ROLL AND STATS SETUP */
@@ -16712,29 +16735,85 @@ body.light {
 
 .light .omens-post-17,
 .light .omens-post-17 .lyric-2,
-.light .omens-post-17 .post-body tagged { background-color: #eaeaea;
-    border-color: #ddd; }
+.light .omens-post-17 .post-body tagged {
+  background-color: #eaeaea;
+  border-color: #ddd;
+}
 
-.light .omens-post-18 .post-body { color:#111; background:#eaeaea; border-color: #ccc; }
-.light .omens-post-18 .post-body i { color:#111; }
-.light .omens-post-18 .post-body-contain { background:#dbdbdb; }
-.light .omens-post-18 .post-body tagged a { color:#111; opacity:10%; }
-.light .omens-post-18 .post-body tagged a:hover { opacity:50%; }
+.light .omens-post-18 .post-body {
+  color: #111;
+  background: #eaeaea;
+  border-color: #ccc;
+}
 
-.light .omens-post-19 { background:#f0f0f0; }
-.light .omens-post-19 .post-body { color:#222; border-color:#ccc; }
-.light .omens-post-19 tagged { background:#f0f0f0; }
-.light .omens-post-19 tagged a { background:#ddd; }
-.light .omens-post-19 .post-icon img { border-color:#ccc; background:#f0f0f0; }
-.light .omens-post-19 .lyric-2:before, .light .omens-post-19 .lyric-2:after { background:#ccc; }
-.light .omens-post-19 .post-body i, .light .omens-post-19 .post-body u { color:#333; }
+.light .omens-post-18 .post-body i {
+  color: #111;
+}
 
-.light .omens-post-20 .post-images { border-color:#e3e3e3; }
-.light .omens-post-20 { background:#f0f0f0; }
-.light .omens-post-20 .post-body { color:#222; }
+.light .omens-post-18 .post-body-contain {
+  background: #dbdbdb;
+}
+
+.light .omens-post-18 .post-body tagged a {
+  color: #111;
+  opacity: 10%;
+}
+
+.light .omens-post-18 .post-body tagged a:hover {
+  opacity: 50%;
+}
+
+.light .omens-post-19 {
+  background: #f0f0f0;
+}
+
+.light .omens-post-19 .post-body {
+  color: #222;
+  border-color: #ccc;
+}
+
+.light .omens-post-19 tagged {
+  background: #f0f0f0;
+}
+
+.light .omens-post-19 tagged a {
+  background: #ddd;
+}
+
+.light .omens-post-19 .post-icon img {
+  border-color: #ccc;
+  background: #f0f0f0;
+}
+
+.light .omens-post-19 .lyric-2:before, .light .omens-post-19 .lyric-2:after {
+  background: #ccc;
+}
+
+.light .omens-post-19 .post-body i, .light .omens-post-19 .post-body u {
+  color: #333;
+}
+
+.light .omens-post-20 .post-images {
+  border-color: #e3e3e3;
+}
+
+.light .omens-post-20 {
+  background: #f0f0f0;
+}
+
+.light .omens-post-20 .post-body {
+  color: #222;
+}
+
 .light .omens-post-20 .post-body i,
-.light .omens-post-20 .post-body u { color:#222; border-color:#ddd; }
-.light .omens-post-20 .post-body:after { opacity: 4%; }
+.light .omens-post-20 .post-body u {
+  color: #222;
+  border-color: #ddd;
+}
+
+.light .omens-post-20 .post-body:after {
+  opacity: 4%;
+}
 
 .light #ucpmenu {
   background: #fff
@@ -16804,4 +16883,3 @@ body.light {
 .light #omens-profile #tracking-container .tracker-item {
   border-color: #d9d9d9;
 }
-
